[package]
name = "game_jam_score_space_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy_hanabi = "0.3"
rand = "0.8"
bevy-inspector-egui = "0.13"
libm = "0.2.5"
heron = {version = "4", features = ["2d"]}

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3